@@ -20,8 +20,6 @@ static int _passes_lvm_type_device_filter(struct dev_filter *f, struct device *d
 {
 	struct dev_types *dt = (struct dev_types *) f->private;
 	const char *name = dev_name(dev);
-	int ret = 0;
-	uint64_t size;
 
 	/* Is this a recognised device type? */
 	if (!dt->dev_type_array[MAJOR(dev->dev)].max_partitions) {
@@ -30,36 +28,7 @@ static int _passes_lvm_type_device_filter(struct dev_filter *f, struct device *d
 		return 0;
 	}
 
-	/* Check it's accessible */
-	if (!dev_open_readonly_quiet(dev)) {
-		log_debug_devs("%s: Skipping: open failed", name);
-		return 0;
-	}
-
-	/* Check it's not too small */
-	if (!dev_get_size(dev, &size)) {
-		log_debug_devs("%s: Skipping: dev_get_size failed", name);
-		goto out;
-	}
-
-	if (size < pv_min_size()) {
-		log_debug_devs("%s: Skipping: Too small to hold a PV", name);
-		goto out;
-	}
-
-	if (dev_is_partitioned(dt, dev)) {
-		log_debug_devs("%s: Skipping: Partition table signature found",
-			       name);
-		goto out;
-	}
-
-	ret = 1;
-
-      out:
-	if (!dev_close(dev))
-		stack;
-
-	return ret;
+	return 1;
 }
 
 static void _lvm_type_filter_destroy(struct dev_filter *f)
@@ -83,6 +52,8 @@ struct dev_filter *lvm_type_filter_create(struct dev_types *dt)
 	f->destroy = _lvm_type_filter_destroy;
 	f->use_count = 0;
 	f->private = dt;
+
+	log_debug_devs("LVM type filter initialised.");
 
 	return f;
 }
